[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ntc"
authors = [{name = "Vladimir Mikhaylov", email = "v.mikhaylov@neurotrade.ru"}]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "nt-dev>=0.34",
    "types-pyyaml",
]
dev = [
    "nt-dev>=0.34",
]

[tool.flit.sdist]
include = [
    "README.md",
]
exclude = [
    ".gitignore",
    "tests/*",
]

[tool.semantic_release]
version_variable = "ntc/__init__.py:__version__"

[tool.mypy]
exclude = ["tests/data"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
