[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cfg"
authors = [{name = "Artem Vasenin", email = "vasart169@gmail.com"}, {name = "Vladimir Mikhaylov"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "pyyaml",
]

[project.urls]
Home = "https://github.com/Rizhiy/cfg"

[project.optional-dependencies]
test = [
    "types-pyyaml",
    "pytest",
]
dev = [
    "cfg[test]",
    "ruff",
    "semantic-release",
]

[tool.flit.sdist]
include = [
    "README.md",
]
exclude = [
    ".gitignore",
    "tests/*",
]

[tool.semantic_release]
version_variable = "ntc/__init__.py:__version__"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"

[project.scripts]
cfg-output-dir = "cfg.helpers:_get_output_dir_cli"
