[metadata]
name = ntc
version = attr:ntc.__version__
description = NeuroTrade Config Library
author = Vladimir Mikhaylov
author_email = v.mikhaylov@neurotrade.ru

[options]
python_requires = >=3.8
install_requires =
    pyyaml
setup_requires =
    setuptools>=48
    wheel
platforms = any

packages = find:

[options.packages.find]
exclude = tests*

[options.extras_require]
tests =
    pytest
    pytest-cov
dev =
    ntu
    pip-tools
    setuptools
    twine
    wheel
all =
    %(tests)s
    %(dev)s

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
    README.md

[semantic_release]
version_variable = "ntc/__init__.py:__version__"
